--- a/FACE_REGOGNITION/FACE_REGOGNITION.csproj
+++ b/FACE_REGOGNITION/FACE_REGOGNITION.csproj
@@ -80,9 +80,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arduino.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Arduino.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Face regognition.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -95,6 +93,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="subjectIDsDataSet.cs">
+      <DependentUpon>subjectIDsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="subjectIDsDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
